fix tab gaps on mobile

--- a/src/app/ui/landing-container/landing-container-body/iframe-container/iframe-container.component.scss
+++ b/src/app/ui/landing-container/landing-container-body/iframe-container/iframe-container.component.scss
@@ -43,10 +43,8 @@
         border-radius: 0px 0px 13px 13px;
         padding: 1px 0px 0px 4px;
 
-
         img {
           max-width: 30%;
-
         }
       }
 
@@ -60,7 +58,6 @@
           font-family: "CrocoSansBlackCAPS";
           font-size: 13px;
           max-width: 72%;
-
         }
 
         div {
@@ -92,12 +89,10 @@
 
           img {
             max-width: 326%;
-
           }
         }
 
         .tab__texts {
-
           p {
             font-size: 18px;
           }
@@ -105,13 +100,11 @@
           div {
             font-size: 18px;
 
-
             span {
             }
           }
         }
       }
-
     }
   }
 
@@ -126,7 +119,6 @@
     iframe {
       width: 95%;
       height: 95%;
-
     }
 
     &__bg {
@@ -139,10 +131,7 @@
       width: 94%;
     }
   }
-
-
 }
-
 
 @media (max-width: variables.$tablet) {
   .main {
@@ -153,7 +142,7 @@
       max-width: 352px;
       width: 98%;
       height: 60px;
-      top: -8%;
+      top: -7.5%;
 
       .tab {
         border-radius: 14px 14px 0px 0px;
@@ -171,7 +160,6 @@
         }
 
         &__texts {
-
           p {
             display: none;
           }
@@ -199,12 +187,10 @@
           }
 
           .tab__texts {
-
             p {
             }
 
             div {
-
               font-size: 16px;
 
               span {
@@ -212,7 +198,6 @@
             }
           }
         }
-
       }
     }
 
@@ -225,17 +210,11 @@
         height: 100%;
       }
     }
-
-
   }
-
 }
-
 
 @media (max-width: 420px) {
   .main {
-
-
     &__iframe {
       max-height: 594px;
 
@@ -243,10 +222,5 @@
         height: 100%;
       }
     }
-
-
   }
 }
-
-
-
